--- a/codes.html
+++ b/codes.html
@@ -374,7 +374,7 @@ div.tocify {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="coding_tutorials.html">Coding Tutorials</a>
+  <a href="coding_tutorials.html">R Coding Tutorials</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
