--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="coding_tutorials.html">Coding Tutorials</a>
+  <a href="coding_tutorials.html">R Coding Tutorials</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -389,6 +389,7 @@ $(document).ready(function () {
 <h1>Caleb Kwon</h1>
 <p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply chains, and Econometrics, and my advisor is Professor Ananth Raman.</p>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>, and my Google Scholar <a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">here</a>.</p>
+<p>I make R tutorial videos for fun when I have free time. To view them, please click the <a href="https://calebkwon.com/coding_tutorials">R Coding Tutorials</a> tab above.</p>
 <div id="recent-updates" class="section level2">
 <h2>Recent Updates</h2>
 <ul>
