--- a/teaching.html
+++ b/teaching.html
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="coding_tutorials.html">Coding Tutorials</a>
+  <a href="coding_tutorials.html">R Coding Tutorials</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
