--- a/coding_tutorials.html
+++ b/coding_tutorials.html
@@ -459,6 +459,22 @@ a column separator --></p>
 </ul>
 </div>
 </div>
+<!-- Fourth set of columns begins here  -->
+<div class="columns">
+<div class="column" style="width:40%;">
+<h1 id="finance">Finance</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=CD-Bk1YAYXk">Downloading Stock Price Data</a> [6:58]</li>
+<li>Scraping Earnings Calendar</li>
+<li>Scraping Dividend Calendar</li>
+</ul>
+</div><div class="column" style="width:1%;">
+<p>  <!-- an empty Div (with a white space), serving as
+a column separator --></p>
+</div><div class="column" style="width:48%;">
+<h1 id="data-cleaningwrangling-ii">Data Cleaning/Wrangling II</h1>
+</div>
+</div>
 
 
 
