--- a/index.html
+++ b/index.html
@@ -378,8 +378,15 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply chains, and Econometrics, and my advisor is Professor Ananth Raman.</p>
-<p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>, and my Google Scholar <a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">here</a>.</p>
+<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor Ananth Raman.</p>
+<div id="links" class="section level2">
+<h2>Links</h2>
+<ul>
+<li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">HBS Profile</a></li>
+<li><a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">CV/Resume</a></li>
+<li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar</a></li>
+</ul>
+</div>
 <div id="recent-updates" class="section level2">
 <h2>Recent Updates</h2>
 <ul>
