--- a/index.html
+++ b/index.html
@@ -379,16 +379,16 @@ $(document).ready(function () {
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
 <p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor Ananth Raman.</p>
-<div id="links" class="section level2">
-<h2>Links</h2>
+<div id="some-links" class="section level2">
+<h2>Some Links</h2>
 <ul>
 <li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">HBS Profile</a></li>
-<li><a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">CV/Resume</a></li>
+<li><a href="https://calebkwon.com/calebkwon_2021.pdf">CV/Resume</a></li>
 <li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar</a></li>
 </ul>
 </div>
-<div id="recent-updates" class="section level2">
-<h2>Recent Updates</h2>
+<div id="some-recent-updates" class="section level2">
+<h2>Some Recent Updates</h2>
 <ul>
 <li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
 <li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> accepted at the <strong>Annals of Statistics</strong>.</li>
