--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ $(document).ready(function () {
 <div style="margin-bottom:25px;">
 
 </div>
-<p><img src="images/caleb_1.jpg" height = "350" style ="display:block; margin-left: auto; margin-right:auto;"></p>
+<p><img src="images/caleb_new.png" height = "350" style ="display:block; margin-left: auto; margin-right:auto;"></p>
 <style type="text/css">
     /* default styles here for older browsers. 
        I tend to go for a 600px - 960px width max but using percentages
@@ -391,7 +391,7 @@ $(document).ready(function () {
 <h2>Some Recent Updates</h2>
 <ul>
 <li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
-<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> accepted at the <strong>Annals of Statistics</strong>.</li>
+<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> <em>forthcoming</em> at the <strong>Annals of Statistics</strong>.</li>
 </ul>
 </div>
 </div>
