--- a/research.html
+++ b/research.html
@@ -341,19 +341,19 @@ $(document).ready(function () {
 <div id="research" class="section level1">
 <h1>Research</h1>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. [With Eric Mbakop]</p>
+<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. <em>With</em> <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a></p>
 <p><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></p></li>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
 <p><em>Reject and Resubmit</em></p></li>
-<li><p>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</p>
+<li><p>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020). <em>With</em> <a href="https://sites.google.com/a/umich.edu/junli/">Jun Li</a> and <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a></p>
 <p><em>Draft coming soon</em></p></li>
-<li><p>On the Dynamics of Retail Labor Productivity (2020) [With Ananth Raman]</p></li>
+<li><p>On the Dynamics of Retail Labor Productivity (2020). <em>With</em> <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a></p></li>
 </ol>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material</h1>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a>. [With Chiara Farronato]</p>
+<li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a>. <em>With</em> <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a></p>
 <p><strong>Harvard Business School Tutorial 621-708</strong></p></li>
 </ol>
 </div>
