--- a/research.html
+++ b/research.html
@@ -25,15 +25,6 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
-<style type="text/css">
-  code{white-space: pre-wrap;}
-  span.smallcaps{font-variant: small-caps;}
-  span.underline{text-decoration: underline;}
-  div.column{display: inline-block; vertical-align: top; width: 50%;}
-  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-  ul.task-list{list-style: none;}
-    </style>
-
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
   pre:not([class]) {
@@ -341,19 +332,19 @@ $(document).ready(function () {
 <div id="research" class="section level1">
 <h1>Research</h1>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. <em>With</em> <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a></p>
+<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</p>
 <p><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></p></li>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
 <p><em>Reject and Resubmit</em></p></li>
-<li><p>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020). <em>With</em> <a href="https://sites.google.com/a/umich.edu/junli/">Jun Li</a> and <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a></p>
+<li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/a/umich.edu/junli/">Jun Li</a> and <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
 <p><em>Draft coming soon</em></p></li>
-<li><p>On the Dynamics of Retail Labor Productivity (2020). <em>With</em> <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a></p></li>
+<li><p>On the Dynamics of Retail Labor Productivity (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
 </ol>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material</h1>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a>. <em>With</em> <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a></p>
+<li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</p>
 <p><strong>Harvard Business School Tutorial 621-708</strong></p></li>
 </ol>
 </div>
@@ -367,7 +358,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
+  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
