--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
   pre:not([class]) {
@@ -337,7 +346,7 @@ $(document).ready(function () {
 <div style="margin-bottom:25px;">
 
 </div>
-<p><img src="images/caleb_new.png" height = "350" style ="display:block; margin-left: auto; margin-right:auto;"></p>
+<p><img src="images/caleb_orig.jpg" height = "280" style ="display:block; margin-left: auto; margin-right:auto;"></p>
 <style type="text/css">
     /* default styles here for older browsers. 
        I tend to go for a 600px - 960px width max but using percentages
@@ -396,7 +405,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
