--- a/research.html
+++ b/research.html
@@ -25,6 +25,15 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
   pre:not([class]) {
@@ -337,7 +346,7 @@ $(document).ready(function () {
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
 <p><em>Reject and Resubmit</em></p></li>
 <li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/a/umich.edu/junli/">Jun Li</a> and <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
-<p><em>Draft coming soon</em></p></li>
+<p><em>Please e-mail for a copy</em></p></li>
 <li><p>On the Dynamics of Retail Labor Productivity (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
 </ol>
 </div>
@@ -358,7 +367,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
