--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ $(document).ready(function () {
 <div style="margin-bottom:25px;">
 
 </div>
-<!-- <img src="images/caleb_orig.jpg" height = "280" style ="display:block; margin-left: auto; margin-right:auto;"> -->
+<p><img src="images/caleb_1.jpg" height = "350" style ="display:block; margin-left: auto; margin-right:auto;"></p>
 <style type="text/css">
     /* default styles here for older browsers. 
        I tend to go for a 600px - 960px width max but using percentages
