--- a/research.html
+++ b/research.html
@@ -316,7 +316,7 @@ $(document).ready(function () {
 <h1>Cases and Teaching Material</h1>
 <ol style="list-style-type: decimal">
 <li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</p>
-<p><strong>Harvard Business School Tutorial 621-708 February, 2021</strong></p></li>
+<p><strong>Harvard Business School Tutorial 621-708, February 2021</strong></p></li>
 </ol>
 </div>
 
