--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
+<p>I am a second year PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
 <div id="some-links" class="section level2">
 <h2>Some Links</h2>
 <ul>
