--- a/research.html
+++ b/research.html
@@ -347,7 +347,7 @@ $(document).ready(function () {
 <p><em>Reject and Resubmit</em></p></li>
 <li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
 <p><em>Please e-mail for a copy</em></p></li>
-<li><p>On the Dynamics of Retail Labor Productivity (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
+<li><p>The Retail Labor Productivity Paradox (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
 </ol>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
