--- a/teaching.html
+++ b/teaching.html
@@ -347,6 +347,12 @@ $(document).ready(function () {
 <li><a href="https://calebkwon.com/rctom_reviews">Please click here for teaching evaluations</a></li>
 </ul></li>
 </ul>
+<div class="figure" style="text-align: center">
+<img src="images/klarman.jpg" alt="Klarman Hall, Harvard Business School" width="40%" />
+<p class="caption">
+Klarman Hall, Harvard Business School
+</p>
+</div>
 </div>
 <div id="northwestern-university-kellogg-school-of-management" class="section level3">
 <h3>Northwestern University – Kellogg School of Management</h3>
