--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>CV.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -331,12 +331,6 @@ $(document).ready(function () {
 </div>
 
 
-<!-- <script> -->
-<!--    $(document).ready(function() { -->
-<!--      $head = $('#header'); -->
-<!--      $head.prepend('<img src=\"hbs.jpg\" style=\"float: right;width: 150px;\"/>') -->
-<!--    }); -->
-<!-- </script> -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
 <script>
@@ -346,57 +340,33 @@ $(document).ready(function () {
 
   gtag('config', 'UA-165847699-1');
 </script>
-<div style="margin-bottom:25px;">
-
+<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<div id="curriculum-vitae" class="section level1">
+<h1>Curriculum Vitae</h1>
+<p><a href="https://calebkwon.com/calebkwon_2021.pdf">PDF Version</a></p>
 </div>
-<p><img src="images/caleb_1.jpg" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"></p>
-<style type="text/css">
-    /* default styles here for older browsers. 
-       I tend to go for a 600px - 960px width max but using percentages
-    */
-    @media only screen and (min-width: 960px) {
-        /* styles for browsers larger than 960px; */
-    }
-    @media only screen and (min-width: 1440px) {
-        /* styles for browsers larger than 1440px; */
-    }
-    @media only screen and (min-width: 2000px) {
-        /* for sumo sized (mac) screens */
-    }
-    @media only screen and (max-device-width: 480px) {
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
-    }
-    @media only screen and (device-width: 768px) {
-       /* default iPad screens */
-    }
-    /* different techniques for iPad screening */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-      /* For portrait layouts only */
-    }
-
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-      /* For landscape layouts only */
-    }
-</style>
-<hr />
-<div id="caleb-kwon" class="section level1">
-<h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
-<div id="some-links" class="section level2">
-<h2>Some Links</h2>
+<div id="personal-information" class="section level1">
+<h1>Personal Information</h1>
 <ul>
-<li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">HBS Profile</a></li>
-<li><a href="https://calebkwon.com/CV.html">CV/Resume</a></li>
-<li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar</a></li>
+<li>Birthplace: Seoul, South Korea</li>
+<li>Hometown: Coquitlam, British Columbia</li>
+<li>Citizenship: Canadian</li>
+<li>Languages: English (fluent), Korean (advanced)</li>
 </ul>
 </div>
-<div id="some-recent-updates" class="section level2">
-<h2>Some Recent Updates</h2>
+<div id="education" class="section level1">
+<h1>Education</h1>
 <ul>
-<li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
-<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> <em>forthcoming</em> at the <strong>Annals of Statistics</strong>.</li>
+<li>Ph.D. in Operations Management, Harvard University, 2019 – 2014 (Expected)</li>
+<li>M.A. in Economics, Northwestern University, 2017</li>
+<li>B.A in Economics, Simon Fraser University, 2015
+<ul>
+<li>Honours First Class w/ Distinction</li>
+<li>Dean’s Medial (Faculty of Arts &amp; Social Sciences): Rank 1 of approximately 2,400</li>
+<li>Jack L. Knetsch Award for Best Thesis in Economics</li>
+<li>Cliff Lloyd Memorial Award for Highest GPA in Economics</li>
+</ul></li>
 </ul>
-</div>
 </div>
 
 
