--- a/research.html
+++ b/research.html
@@ -289,6 +289,9 @@ $(document).ready(function () {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
+<li>
+  <a href="CV.html">CV/Resume</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
