--- a/CV.html
+++ b/CV.html
@@ -368,6 +368,17 @@ $(document).ready(function () {
 </ul></li>
 </ul>
 </div>
+<div id="research-experience" class="section level1">
+<h1>Research Experience</h1>
+<ul>
+<li><a href="https://sites.northwestern.edu/jlh951/">Professor Joel Horowitz</a> (Econometric Theory)
+<ul>
+<li>Research assistant for <a href="https://www.sciencedirect.com/science/article/pii/S0304407620303353">Bounding the Difference between true and nominal rejection probabilities in tests of hypotheses about instrumental variables models</a></li>
+</ul></li>
+<li><a href="http://deankarlan.com/">Professor Dean Karlan</a> (Applied Microeconomics)</li>
+<li><a href="https://www.kellogg.northwestern.edu/faculty/jagannathan/htm/">Professor Ravi Jagannathan</a> (Financial Econometrics)</li>
+</ul>
+</div>
 
 
 
