--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@ $(document).ready(function () {
 <div id="some-recent-updates" class="section level2">
 <h2>Some Recent Updates</h2>
 <ul>
+<li>My paper, “Disclosure-Driven Social Engagement in Supply Chains” (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a> won 1st place in POMS’ College of Sustainable Operations: Best Student Paper Competition.</li>
 <li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
 <li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> <em>forthcoming</em> at the <strong>Annals of Statistics</strong>.</li>
 </ul>
