--- a/CV.html
+++ b/CV.html
@@ -362,14 +362,14 @@ $(document).ready(function () {
 <li>B.A in Economics, Simon Fraser University, 2015
 <ul>
 <li>Honours First Class w/ Distinction</li>
-<li>Dean’s Medial (Faculty of Arts &amp; Social Sciences): Rank 1 of approximately 2,400</li>
+<li>Dean’s Medal (Faculty of Arts &amp; Social Sciences): Rank 1 of approximately 2,400</li>
 <li>Jack L. Knetsch Award for Best Thesis in Economics</li>
 <li>Cliff Lloyd Memorial Award for Highest GPA in Economics</li>
 </ul></li>
 </ul>
 </div>
-<div id="research-experience" class="section level1">
-<h1>Research Experience</h1>
+<div id="research-assistantships" class="section level1">
+<h1>Research Assistantships</h1>
 <ul>
 <li><a href="https://sites.northwestern.edu/jlh951/">Professor Joel Horowitz</a> (Econometric Theory)
 <ul>
