--- a/index.html
+++ b/index.html
@@ -381,21 +381,13 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
+<p>I’m a PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
 <div id="some-links" class="section level2">
 <h2>Some Links</h2>
 <ul>
 <li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">HBS Profile</a></li>
 <li><a href="https://calebkwon.com/CV.html">CV/Resume</a></li>
 <li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar</a></li>
-</ul>
-</div>
-<div id="some-recent-updates" class="section level2">
-<h2>Some Recent Updates</h2>
-<ul>
-<li>My paper, “Disclosure-Driven Social Engagement in Supply Chains” (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a> won 1st place in POMS’ College of Sustainable Operations: Best Student Paper Competition.</li>
-<li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
-<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> <em>forthcoming</em> at the <strong>Annals of Statistics</strong>.</li>
 </ul>
 </div>
 </div>
