--- a/research.html
+++ b/research.html
@@ -349,7 +349,7 @@ $(document).ready(function () {
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
 <p><em>Reject and Resubmit</em></p></li>
 <li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
-<p><strong>1st place in POMS College of Sustainable Operations: Best Student Paper Competition</strong></p></li>
+<p><strong><a href="https://poms.org/colleges/csustops/">1st place in POMS College of Sustainable Operations: Best Student Paper Competition</a></strong></p></li>
 <li><p>The Retail Labor Productivity Paradox (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
 </ol>
 </div>
