--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I’m a PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am grateful to be advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
+<p>I’m a 2nd year PhD student in the <a href="https://www.hbs.edu/faculty/units/tom/Pages/default.aspx">Technology and Operations Management Unit</a> within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am grateful to be advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
 <p>Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University. I was also a research assistant at the Finance Department at the Kellogg School of Management.</p>
 <div id="some-links" class="section level2">
 <h2>Some Links</h2>
