--- a/research.html
+++ b/research.html
@@ -346,7 +346,7 @@ $(document).ready(function () {
 <ol style="list-style-type: decimal">
 <li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</p>
 <p><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></p></li>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2021)</a>. [<strong>NEW</strong>]</p>
 <p><em>Reject and Resubmit</em></p></li>
 <li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
 <p><strong><a href="https://poms.org/colleges/csustops/">1st place in POMS College of Sustainable Operations: Best Student Paper Competition</a></strong></p></li>
