--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ $(document).ready(function () {
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
 <p>I’m a 3rd year PhD student in Operations Management at Harvard University (Business School and the Graduate School of Arts &amp; Sciences). I am interested in Supply Chains, Retail Operations, and Econometrics. I am grateful to be advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
-<p>Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University. I was also a research assistant at the Finance Department at the Kellogg School of Management.</p>
+<p>I’m originally from Vancouver, Canada. Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University.</p>
 <div id="some-links" class="section level2">
 <h2>Some Links</h2>
 <ul>
