--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title> </title>
+<title>research.utf8</title>
 
 <script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -288,7 +288,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
 
 </div>
 
@@ -321,7 +320,7 @@ $(document).ready(function () {
 </ol>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
-<h1>Cases and Teaching Material</h1>
+<h1>Cases and Teaching Material:</h1>
 <ol style="list-style-type: decimal">
 <li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</p>
 <p><strong>Harvard Business School Tutorial 621-708, February 2021</strong></p></li>
