--- a/research.html
+++ b/research.html
@@ -302,29 +302,45 @@ $(document).ready(function () {
   gtag('config', 'UA-165847699-1');
 </script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="published" class="section level1">
-<h1>Published:</h1>
-<ol style="list-style-type: decimal">
-<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</p>
-<p><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></p></li>
-</ol>
+<div id="academic-papers" class="section level1">
+<h1>Academic Papers</h1>
+<div id="estimation-of-the-number-of-components-in-nonparametric-multivariate-finite-mixture-models-2021-with-eric-mbakop." class="section level2">
+<h2>1. <a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
+<div id="forthcoming-at-the-annals-of-statistics" class="section level3">
+<h3><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></h3>
+<hr />
 </div>
-<div id="in-progress" class="section level1">
-<h1>In Progress:</h1>
-<ol start="2" style="list-style-type: decimal">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021)</a></p>
-<p><em>Resubmitted</em> to <strong>Manufacturing &amp; Service Operations Management</strong></p></li>
-<li><p>Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</p>
-<p><strong><a href="https://poms.org/colleges/csustops/">Winner: POMS College of Sustainable Operations, Best Student Paper Competition</a></strong></p></li>
-<li><p>The Retail Labor Productivity Paradox (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p></li>
-</ol>
+</div>
+<div id="supply-chain-disruptions-evidence-from-the-bankruptcy-of-hanjin-shipping-2021" class="section level2">
+<h2>2. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021)</a></h2>
+<div id="resubmitted-to-manufacturing-service-operations-management" class="section level3">
+<h3><em>Resubmitted</em> to <strong>Manufacturing &amp; Service Operations Management</strong></h3>
+<hr />
+</div>
+</div>
+<div id="disclosure-driven-social-engagement-in-supply-chains-2021-with-andrew-di-wu." class="section level2">
+<h2>3. Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
+<div id="under-review-at-management-science" class="section level3">
+<h3><em>Under Review</em> at <strong>Management Science</strong></h3>
+</div>
+<div id="winner-poms-college-of-sustainable-operations-best-student-paper-competition" class="section level3">
+<h3><a href="https://poms.org/colleges/csustops/">Winner: POMS College of Sustainable Operations, Best Student Paper Competition</a></h3>
+<hr />
+</div>
+</div>
+<div id="the-retail-labor-productivity-paradox-2021-with-ananth-raman." class="section level2">
+<h2>4. The Retail Labor Productivity Paradox (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<hr />
+</div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</p>
-<p><strong>Harvard Business School Tutorial 621-708, February 2021</strong></p></li>
+<li><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</li>
 </ol>
+<div id="harvard-business-school-tutorial-621-708-february-2021" class="section level3">
+<h3><strong>Harvard Business School Tutorial 621-708</strong>, February 2021</h3>
+</div>
 </div>
 
 
