--- a/research.html
+++ b/research.html
@@ -319,9 +319,9 @@ $(document).ready(function () {
 </div>
 </div>
 <div id="disclosure-driven-social-engagement-in-supply-chains-2021-with-andrew-di-wu." class="section level2">
-<h2>3. Disclosure-Driven Social Engagement in Supply Chains (2021) with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
-<div id="under-review-at-management-science" class="section level3">
-<h3><em>Under Review</em> at <strong>Management Science</strong></h3>
+<h2>3. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven Social Engagement in Supply Chains (2021)</a> with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
+<div id="under-review-at-manufacturing-service-operations-management" class="section level3">
+<h3><em>Under Review</em> at <strong>Manufacturing &amp; Service Operations Management</strong></h3>
 </div>
 <div id="winner-poms-college-of-sustainable-operations-best-student-paper-competition" class="section level3">
 <h3><a href="https://poms.org/colleges/csustops/">Winner: POMS College of Sustainable Operations, Best Student Paper Competition</a></h3>
