--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ $(document).ready(function () {
 <div style="margin-bottom:25px;">
 
 </div>
-<p><img src="images/caleb_1.jpg" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"></p>
+<p><img src="images/caleb_light.jfif" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"></p>
 <style type="text/css">
     /* default styles here for older browsers. 
        I tend to go for a 600px - 960px width max but using percentages
