--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@ $(document).ready(function () {
 
   gtag('config', 'UA-165847699-1');
 </script>
+<p><img src="images/caleb_light.jfif" width="50%" /></p>
 <div style="margin-bottom:25px;">
 
 </div>
-<p><img src="images/caleb_light.jfif" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"></p>
+<!-- <img src="images/caleb_light.jfif" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"> -->
 <style type="text/css">
     /* default styles here for older browsers. 
        I tend to go for a 600px - 960px width max but using percentages
