--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ $(document).ready(function () {
 
   gtag('config', 'UA-165847699-1');
 </script>
-<p><img src="images/caleb_light.jfif" width="45%" /></p>
+<p><img src="images/caleb_1.jpg" width="45%" /></p>
 <div style="margin-bottom:25px;">
 
 </div>
