--- a/research.html
+++ b/research.html
@@ -306,8 +306,8 @@ $(document).ready(function () {
 <h1>Academic Papers</h1>
 <div id="estimation-of-the-number-of-components-in-nonparametric-multivariate-finite-mixture-models-2021-with-eric-mbakop." class="section level2">
 <h2>1. <a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
-<div id="forthcoming-at-the-annals-of-statistics" class="section level3">
-<h3><em>Forthcoming</em> at the <strong>Annals of Statistics</strong></h3>
+<div id="annals-of-statistics-494-2178-2205-august-2021" class="section level3">
+<h3><strong>Annals of Statistics</strong> 49(4) 2178-2205 (August, 2021)</h3>
 <hr />
 </div>
 </div>
