--- a/research.html
+++ b/research.html
@@ -313,33 +313,38 @@ $(document).ready(function () {
 </div>
 <div id="supply-chain-disruptions-evidence-from-the-bankruptcy-of-hanjin-shipping-2021" class="section level2">
 <h2>2. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021)</a></h2>
-<div id="resubmitted-to-manufacturing-service-operations-management" class="section level3">
-<h3><em>Resubmitted</em> to <strong>Manufacturing &amp; Service Operations Management</strong></h3>
+<div id="under-revision-for-submission." class="section level3">
+<h3>Under revision for submission.</h3>
 <hr />
 </div>
 </div>
 <div id="disclosure-driven-social-engagement-in-supply-chains-2021-with-andrew-di-wu." class="section level2">
 <h2>3. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven Social Engagement in Supply Chains (2021)</a> with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
-<div id="under-review-at-manufacturing-service-operations-management" class="section level3">
-<h3><em>Under Review</em> at <strong>Manufacturing &amp; Service Operations Management</strong></h3>
+<div id="major-revision-1st-round-at-msom" class="section level3">
+<h3><em>Major Revision (1st Round)</em> at <strong>MSOM</strong></h3>
 </div>
 <div id="winner-poms-college-of-sustainable-operations-best-student-paper-competition" class="section level3">
 <h3><a href="https://poms.org/colleges/csustops/">Winner: POMS College of Sustainable Operations, Best Student Paper Competition</a></h3>
 <hr />
 </div>
 </div>
-<div id="the-retail-labor-productivity-paradox-2021-with-ananth-raman." class="section level2">
-<h2>4. The Retail Labor Productivity Paradox (2021) with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<div id="the-value-of-flexible-labor-with-ananth-raman." class="section level2">
+<h2>4. The Value of Flexible Labor with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<hr />
+</div>
+<div id="managers-labor-scheduling-decisions-and-retail-store-store-performance-with-jorge-tamayo-and-ananth-raman." class="section level2">
+<h2>5. Manager’s Labor Scheduling Decisions and Retail Store Store Performance with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a> and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
 <hr />
 </div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
-<ol style="list-style-type: decimal">
-<li><a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</li>
-</ol>
+<div id="getting-started-in-r-cloud-studio-2021-with-chiara-farronato." class="section level2">
+<h2>1. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
 <div id="harvard-business-school-tutorial-621-708-february-2021" class="section level3">
 <h3><strong>Harvard Business School Tutorial 621-708</strong>, February 2021</h3>
+<hr />
+</div>
 </div>
 </div>
 
