--- a/research.html
+++ b/research.html
@@ -328,8 +328,8 @@ $(document).ready(function () {
 <hr />
 </div>
 </div>
-<div id="the-value-of-flexible-labor-with-ananth-raman." class="section level2">
-<h2>4. The Value of Flexible Labor with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<div id="the-costs-and-benefits-of-flexible-labor-with-ananth-raman." class="section level2">
+<h2>4. The Costs and Benefits of Flexible Labor with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
 <hr />
 </div>
 <div id="managers-labor-scheduling-decisions-and-retail-store-store-performance-with-jorge-tamayo-and-ananth-raman." class="section level2">
