--- a/teaching.html
+++ b/teaching.html
@@ -303,7 +303,7 @@ $(document).ready(function () {
 </script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <div class="figure" style="text-align: center">
-<img src="images/klarman.jpg" alt="Klarman Hall, Harvard Business School" width="40%" />
+<img src="images/klarman.jpg" alt="Klarman Hall, Harvard Business School" width="50%" />
 <p class="caption">
 Klarman Hall, Harvard Business School
 </p>
@@ -316,6 +316,12 @@ Klarman Hall, Harvard Business School
 <ul>
 <li><a href="https://calebkwon.com/rctom_reviews">Please click here for teaching evaluations</a></li>
 </ul></li>
+</ul>
+</div>
+<div id="the-university-of-chicago-booth-school-of-business" class="section level1">
+<h1>The University of Chicago – Booth School of Business</h1>
+<ul>
+<li>Operations Management Executive Education – Spring 2022</li>
 </ul>
 </div>
 <div id="northwestern-university-kellogg-school-of-management" class="section level1">
