--- a/index.html
+++ b/index.html
@@ -343,14 +343,15 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I’m a 3rd year PhD student in Operations Management at Harvard University (Business School and the Graduate School of Arts &amp; Sciences). My research interests are in Supply Chains, Retail Operations and Econometrics. I am grateful to be advised by Professor <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</p>
-<p>I’m originally from Vancouver, Canada. Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University.</p>
+<p>I’m a 3rd year PhD student in Operations Management at Harvard University (Business School and the Graduate School of Arts &amp; Sciences).</p>
+<p>My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. Please see the <a href="https://calebkwon.com/research.html">Research</a> tab for my papers.</p>
+<p>My dissertation committee consists of Professors <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a> (Chairperson), <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio Moreno</a>, and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a>.</p>
 <div id="some-links" class="section level2">
 <h2>Some Links</h2>
 <ul>
-<li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">HBS Profile</a></li>
-<li><a href="https://calebkwon.com/CV.html">CV/Resume</a></li>
-<li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar</a></li>
+<li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">Harvard Business School Profile</a></li>
+<li><a href="https://calebkwon.com/CV.html">Curriculum Vitae/Resume</a></li>
+<li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar Profile</a></li>
 </ul>
 </div>
 </div>
