--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@ $(document).ready(function () {
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
 <p>I’m a 3rd year PhD Candidate in Operations Management at Harvard University.</p>
-<p>My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. I am particularly interested in how firms can use data-driven techniques to identify manager capabilities by examining labor scheduling decisions, and efficiently allocate store managers across their stores. Please see the <a href="https://calebkwon.com/research.html">Research</a> tab for my papers.</p>
-<p>My dissertation committee consists of Professors <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a> (Chairperson), <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio Moreno</a>, and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a>.</p>
+<p>My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. Please see the <a href="https://calebkwon.com/research.html">Research</a> tab for my papers.My dissertation committee consists of Professors <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a> (Chairperson), <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio Moreno</a>, and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a>.</p>
 <p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser University, and an M.A in Economics from Northwestern University.</p>
 </div>
 <div id="about-me" class="section level1">
