--- a/research.html
+++ b/research.html
@@ -339,10 +339,28 @@ $(document).ready(function () {
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
-<div id="getting-started-in-r-cloud-studio-2021-with-chiara-farronato." class="section level2">
-<h2>1. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio (2021)</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
+<div id="getting-started-in-r-cloud-studio-with-chiara-farronato." class="section level2">
+<h2>1. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
 <div id="harvard-business-school-tutorial-621-708-february-2021" class="section level3">
 <h3><strong>Harvard Business School Tutorial 621-708</strong>, February 2021</h3>
+</div>
+</div>
+<div id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-video-with-chiara-farronato." class="section level2">
+<h2>2. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61245">Innovation at Uber: The Launch of Express POOL Assignment Solutions Video</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
+<div id="harvard-business-school-multimediavideo-supplement-622-704-january-2022" class="section level3">
+<h3><strong>Harvard Business School Multimedia/Video Supplement 622-704</strong>, January 2022</h3>
+</div>
+</div>
+<div id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-comparing-commuting-and-non-commuting-hours-with-chiara-farronato." class="section level2">
+<h2>3. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61244">Innovation at Uber: The Launch of Express POOL Assignment Solutions: Comparing Commuting and Non-Commuting Hours</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
+<div id="harvard-business-school-teaching-note-622-054-january-2022" class="section level3">
+<h3><strong>Harvard Business School Teaching Note 622-054</strong>, January 2022</h3>
+</div>
+</div>
+<div id="innovation-at-uber-the-launch-of-express-pool-assignment-comparing-commuting-and-non-commuting-hours-with-chiara-farronato." class="section level2">
+<h2>4. <a href="http://hbr.org/product/Innovation-at-Uber--The-L/an/622053-PDF-ENG">Innovation at Uber: The Launch of Express POOL Assignment: Comparing Commuting and Non-Commuting Hours</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
+<div id="harvard-business-school-supplement-622-053-january-2022" class="section level3">
+<h3><strong>Harvard Business School Supplement 622-053</strong>, January 2022</h3>
 <hr />
 </div>
 </div>
